corpus/comments.txt

===
comments - single-line
===

// this is a comment

---

(source_file
  (single_line_comment)
)

===
comments - multi-line
===

/*

this
is
a
multiline
comment

*/

---

(source_file
  (multi_line_comment)
)
