corpus/component/elements.txt

====
component - elements
====

component Button {
  elements {
    shape btn-container {
      text label
    }
  }
}

---

(source_file
  (component_block
    (identifier)
    (elements_block
      (element_declaration
        (element_type)
        (identifier)
        (element_declaration
          (element_type)
          (identifier)
        )
      )
    )
  )
)
