corpus/component/styles.txt

====
component - default styles
====

component Button {
  style shape {
    color: #007BFF
  }
}

---

(source_file
  (component_block
    (identifier)

    (style_block
      (identifier)
      (style_declaration
        (identifier)
        (value
          (color)
        )
      )
    )
  )
)

====
component - conditional styles
====

component Button {
  style shape {
    color: #007BFF
  }

  style shape when $dark-mode is on {
    color: #BADA55
  }
}

---

(source_file
  (component_block
    (identifier)

    (style_block
      (identifier)

      (style_declaration
        (identifier)
        (value
          (color)
        )
      )
    )

    (style_block
      (identifier)
      (conditional
        (token_reference
          (identifier)
        )
        (positive_assertion)
        (keyword)
      )

      (style_declaration
        (identifier)
        (value
          (color)
        )
      )
    )
  )
)
