corpus/story/frames.txt

====
story/frames - single layer frame
====

story A button in several sizes {
  frame A small button {
    Button {
      size: small
      icon: Icon {
        src: /assets/icons/arrow.svg
      }
      icons {
        Icon {}
        Icon {}
        Icon {}
      }
    }
  }
}

---

(source_file
  (story_block
    (spaced_identifier)
    (frame_declaration
      (identifier)

    )
  )
)
